vlib/v/checker/tests/arrow_op_wrong_right_type_err_a.vv
fn main() {
	ch := chan u64{cap: 10}
	obj := 'test'
	ch <- obj
}
